style.css
body {
  text-align: center;
}

h1 {
  color: blue;
}

#header {
  text-align: center;
  padding-bottom: 30px;
  margin: auto;
  width: 550px;
  border-style: dashed;
  border-color: #FFF
}
 #header li {
   text-align: left;
 }

 #line2 {
   display: block;
   text-align: left;
   margin-left: 20px;
 }

 #multiplechoice {
   text-align: left;
   margin: auto;
   width: 350px;
 }

 #answerbox{
   text-align: center;
   margin: auto;
   width: 550px;
   position: absolute;
   width: 99%;
 }

 #cardPrompt {
   text-align: center;
   position: absolute;
   width: 99%;
   padding: 50px 0;
 }

 #buttons{
   text-align: center;
   width: 98%;
   /*width: 100px;*/

 }

